[gd_scene load_steps=21 format=2]

[ext_resource path="res://art/enemySwimming_2.png" type="Texture" id=1]
[ext_resource path="res://art/enemyWalking_2.png" type="Texture" id=2]
[ext_resource path="res://art/enemySwimming_1.png" type="Texture" id=3]
[ext_resource path="res://art/enemyFlyingAlt_2.png" type="Texture" id=4]
[ext_resource path="res://art/enemyWalking_1.png" type="Texture" id=5]
[ext_resource path="res://art/enemyFlyingAlt_1.png" type="Texture" id=6]
[ext_resource path="res://scripts/Enemy.gd" type="Script" id=7]
[ext_resource path="res://enemies/void_ships.png" type="Texture" id=8]
[ext_resource path="res://particles/esmokeyfire.png" type="Texture" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 30.0

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 512, 0, 192, 320 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 704, 0, 192, 320 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 896, 0, 192, 320 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1088, 0, 192, 320 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 128, 320 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 128, 0, 128, 320 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 256, 0, 128, 320 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 384, 0, 128, 320 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "fly",
"speed": 3.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "swim",
"speed": 3.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 3.0
} ]

[sub_resource type="ParticlesMaterial" id=11]
flag_disable_z = true
direction = Vector3( 1, 1, 1 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
angular_velocity = 45.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 100.0
damping_random = 0.75
scale_random = 0.1
hue_variation_random = 1.0

[node name="Enemy" type="RigidBody2D" groups=["enemy"]]
collision_layer = 14
collision_mask = 14
gravity_scale = 0.0
contact_monitor = true
script = ExtResource( 7 )

[node name="col" type="CollisionShape2D" parent="."]
rotation = 1.5708
z_index = 1
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )
animation = "idle"
frame = 2
playing = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="atkTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="explode" type="Particles2D" parent="."]
emitting = false
amount = 18
one_shot = true
speed_scale = 3.0
explosiveness = 0.86
randomness = 1.0
process_material = SubResource( 11 )
texture = ExtResource( 9 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_enemy_screen_exited"]
[connection signal="timeout" from="atkTimer" to="." method="_on_atkTimer_timeout"]
